--- a/transforming&vectorgeneration.ipynb
+++ b/transforming&vectorgeneration.ipynb
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#The original dataset was transformed to create the new csv disease_symptom_list.csv which is a simple disease-symptoms mapping\n",
+        "#The original dataset(https://data.mendeley.com/datasets/2cxccsxydc/1) was transformed to create the new csv disease_symptom_list.csv which is a simple disease-symptoms mapping\n",
         "\n",
         "import pandas as pd\n",
         "df2=pd.read_csv('disease_symptom_list.csv')\n",
